<resources>
    <string name="app_name">LittleGuy</string>
    <string name="logo_app_desc">LittleGuy App Logo</string>
    <string name="get_started_title_lets">Давайте</string>
    <string name="get_started_title_start">начнем!</string>
    <string name="get_started_text">Маленький здоровяк позволит вам поддерживать свой уровень здоровья на запредельно хорошем уровне, благодаря множеству полезных разделов с рецептами здоровой еды, упражнениями для зарядки с утра, отслеживанию потребления воды и качества сна. Начни свой путь к здоровому образу жизни прямо сейчас!</string>
    <string name="physical_list_title">ФИЗИЧЕСКАЯ АКТИВНОСТЬ</string>
    <string name="physical_list_text">Играй и выполняй упражнения, чтобы быть таким же здоровым и веселым, как это красное яблочко!</string>
    <string name="physical_title">УПРАЖНЕНИЯ</string>
    <string name="games_title">ИГРЫ</string>
    <string name="health_article_title">СТАТЬИ О ЗДОРОВЬЕ</string>
    <string name="food_article_title">СТАТЬИ О ПИТАНИИ</string>
    <string name="promotion_article_title">СТАТЬИ О РАЗВИТИИ</string>
    <string name="article_list_title">СТАТЬИ</string>
    <string name="personal_data_title">ПЕРСОНАЛЬНАЯ ИНФОРМАЦИЯ</string>
    <string name="profile_title">ВАШ ПРОФИЛЬ</string>
    <string name="loading">ЗАГРУЗКА</string>
    <string name="sleep_tracker_title">ОТСЛЕЖИВАНИЕ СНА</string>
    <string name="sleep_hours">ЧАСЫ СНА: %1$d</string>
    <string name="trackers_title">ТРЕКЕРЫ</string>
    <string name="trackers_description">Здесь ты можешь наблюдать за своим прогрессом в достижении здоровых привычек за последние 7 дней</string>
    <string name="trackers_sleep">СОН</string>
    <string name="trackers_water">ВОДА</string>
    <string name="water_value">0 / 2000 мл</string>
    <string name="water_amount">%1$d / 2000 мл</string>
    <string name="hint_name">Введите имя</string>
    <string name="label_name">Имя</string>
    <string name="label_age">Возраст</string>
    <string name="hint_age">Введите возраст</string>
    <string name="label_height">Рост</string>
    <string name="hint_height">Введите рост</string>
    <string name="label_weight">Вес</string>
    <string name="hint_weight">Введите вес</string>
    <string name="not_found_data">НЕ ЗАДАНО</string>
    <string name="health_article_title_first">Дофамин: как этот “химический бум" заставляет чувствовать себя круто?</string>
    <string name="health_article_short_desc_first">Как это вещество влияет на нашу мотивацию, удовлетворение и эмоции. Узнайте, какие приключения ждут вас в мире химических реакций вашего мозга!</string>
    <string name="health_article_desc_first">
        <![CDATA[
        Эй, ребята! Давайте поговорим о чем-то, что сделает ваш мозг бум-бум! Да-да, мы говорим о дофамине! Что это за штука?<br><br>
        <b>Так что такое дофамин?</b><br>
        Окей, представьте себе своего любимого супергероя. Теперь умножьте его силу на 100 и добавьте сюда дозу веселья. Вот вам и дофамин! Это химическое вещество в вашем мозгу, которое делает вас чувствовать себя настоящим суперзвездой!<br><br>
        <b>И это еще не все!</b><br>
        Дофамин - наш верный компаньон в мире мотивации…<br><br>
        <b>Итак, ребята, помните:</b><br>
        дофамин - это как та самая крутая песня в вашем плейлисте… ✨🚀
        ]]>
    </string>
    <string name="health_article_title_second">Мифы и правда о спорте: Заблуждения, которые стоит развеять!</string>
    <string name="health_article_short_desc_second">Разбираем популярные мифы о спорте! Готовы узнать, что правда, а что вымысел, когда речь заходит о физической активности?</string>
    <string name="health_article_desc_second">
        <![CDATA[
        Вы когда-нибудь задумывались о том, что сон - это не только приятное времяпрепровождение, но и настоящий бойцовский ринг для вашего организма? Да-да, сон играет огромную роль в вашем здоровье, и давайте узнаем почему!<br><br>
        <b>Сон и ваше здоровье</b><br>
        Сон - это как ремонтная мастерская для вашего организма. Когда вы засыпаете, ваше тело активно работает, восстанавливая поврежденные клетки, борясь с инфекциями и обновляя ваше физическое и психическое состояние. Недостаток сна может ослабить ваш иммунитет и увеличить риск развития различных заболеваний.<br><br>
        <b>Сон и эмоции</b><br>
        Сон играет ключевую роль в регуляции ваших эмоций и настроения. Недостаток сна может привести к увеличению уровня стресса, раздражительности и тревоги. Запаситесь крепким сном, чтобы встретить вызовы дня с улыбкой на лице!<br><br>
        <b>Сон и успех в учебе</b><br>
        Ваш мозг работает на полную катушку во время сна. Это время, когда он обрабатывает и укрепляет полученные знания, помогая вам лучше запоминать информацию и решать сложные задачи. Поставьте себе целью спать достаточно каждую ночь, чтобы ваш мозг работал на все 100%!<br><br>
        <b>Советы для здорового сна</b><br>
         - Создайте уютную атмосферу: Убедитесь, что ваша комната темная, прохладная и тихая. Используйте маски для сна или беруши, если это необходимо.<br>
         - Установите режим: Постарайтесь ложиться спать и просыпаться в одно и то же время каждый день, чтобы ваш организм привык к определенному расписанию.<br>
         - Избегайте экранов: Перед сном отложите смартфон, планшет или ноутбук. Синий свет, излучаемый экранами, может нарушить ваш сон.<br><br>
        Итак, подростки, время разобраться с мифами и понять, как важен сон для вашего здоровья! Готовы ли вы принять вызов и стать настоящими мастерами своих сновидений? ✨💤
        ]]>
    </string>
    <string name="health_article_title_third">Битва за сон: Как мирные сновидения станут твоими секретными оружиями</string>
    <string name="health_article_short_desc_third">Почему сон - это не только приятное времяпрепровождение, но и важный инструмент для вашего здоровья?</string>
    <string name="health_article_desc_third">
        <![CDATA[
        <b>Спорт</b> - это не только про борьбу за медали и рекорды, но и про разбор мифов! Давайте разберемся, что правда, а что вымысел, когда речь идет о здоровом образе жизни и тренировках!<br><br>
        <b>1. "Тренировки - только для мускулистых парней!"</b><br>
        Фигня! Тренировки - это для всех, кто хочет быть в форме и здоровым. Независимо от пола или внешности, каждый может найти вид спорта, который подойдет именно ему!<br><br>
        <b>2. "Больше - лучше!" </b><br>
        Эх, молодежь! Но нет, больше тренировок не всегда значит лучше результаты. Отдых так же важен, как и сама тренировка. Поддерживайте баланс, чтобы избежать перетренировок и травм.<br><br>
        <b>3. "Спорт - это для тех, кто умеет играть!"</b><br>
        Забудьте об этом! Спорт - это не только о соревнованиях. Это о здоровье, веселье и дружбе. Найдите свою страсть и просто наслаждайтесь движением!<br><br>
        <b>4. "Занятия спортом - скучно и нудно!"</b><br>
        Ага, а кто сказал?! Спорт может быть веселым и увлекательным! Попробуйте разные виды спорта - от танцев до скейтбординга - и найдите то, что вас зацепит.<br><br>
        <b>5. "Для занятий спортом нужно много дорогих тренажеров и спортивной одежды!"</b><br>
        Ложь! Достаточно пары кроссовок и удобной одежды, и вы готовы к приключениям! Главное - ваша мотивация и энтузиазм!<br><br>
        Итак, друзья, не верьте всему, что говорят о спорте! Развеивайте мифы, двигайтесь и наслаждайтесь каждым моментом вашего здорового и активного образа жизни! 🏃‍♂️💪
        ]]>
    </string>
    <string name="food_article_title_first">Живи вкусно: Как создать свой персональный рацион здоровья</string>
    <string name="food_article_short_desc_first">Узнайте, как создать сбалансированный рацион, который будет соответствовать вашим вкусам и потребностям вашего организма.</string>
    <string name="food_article_desc_first">
        <![CDATA[
        Вы когда-нибудь задумывались о том, что ваше тело - это как главный персонаж вашей жизни, и питание - это его основной сценарий? <b>Давайте сделаем ваш рацион интересным и полезным, как самый яркий блокбастер!</b><br><br>
        <b>Шаг 1: Взгляните на свой плейлист</b><br>
        Первый шаг к здоровому питанию - это понять, что вы кушаете на протяжении дня. Сделайте анализ своего питания: сколько фастфуда и сладкого в вашем рационе? Возможно, пришло время обновить свой плейлист и добавить туда больше свежих овощей и фруктов!<br><br>
        <b>Шаг 2: Разнообразие - это ключ</b><br>
        Забудьте о скучном и монотонном питании! Ваш рацион должен быть разнообразным и интересным, как самые горячие тренды в музыке. Попробуйте новые продукты, экспериментируйте с разными способами приготовления блюд и создавайте свои собственные кулинарные шедевры!<br><br>
        <b>Шаг 3: Баланс - ваш лучший друг</b><br>
        Сбалансированный рацион - это как правильный микс в вашем плейлисте: нужно сочетать разные ингредиенты, чтобы создать гармонию. Включите в свой рацион все группы пищи: белки, углеводы, жиры, витамины и минералы. Помните, что все важно, и не исключайте ни одной группы продуктов!<br><br>
        <b>Шаг 4: Помните про воду</b><br>
        Вода - это как основной аккорд в вашей любимой песне. Не забывайте пить достаточное количество воды в течение дня, чтобы ваш организм функционировал на полную мощность. Замените газировку на свежую воду с лимоном или мятой - это будет вашим новым главным хитом!<br><br>
        Итак, подростки, время создать свой персональный рацион здоровья и начать жить вкусно и полезно! Готовы ли вы стать главным режиссером своего питания? 🍎🥗
        ]]>
    </string>
    <string name="food_article_title_second">Бодрое утро, мир! Стартуем с здорового завтрака!</string>
    <string name="food_article_short_desc_second">Готовьте здоровые завтраки, которые станут вашим секретным оружием для энергичного старта дня.</string>
    <string name="food_article_desc_second">
        <![CDATA[
        Хей, подростки! Готовы ли вы начать свой день с энергией и позитивом? Секрет успеха прост: здоровый завтрак! <b>Давайте разберемся, какие идеи и рецепты помогут вам стартовать с энтузиазмом и энергией!</b><br>
        <b>1. Завтрак-шоу: Поднимаем завесу</b><br>
        Завтрак - это ваше собственное утреннее шоу! Поднимайте завесу с удивительными блюдами, которые сделают ваше утро по-настоящему особенным. Шоколадные чипсы на завтрак? Да, это тоже возможно!<br><br>
        <b>2. Палитра вкусов: Экспериментируем</b><br>
        Утро - время для экспериментов! Играйте с вкусами и текстурами, создавая свои уникальные комбинации. Овсянка с ягодами и орехами или авокадо-тост с яйцом - выбирайте то, что вас вдохновляет!<br><br>
        <b>3. Прощай, мучительный выбор: Загрузка белка</b><br>
        Загрузка белка - это как запуск нового альбома вашего любимого исполнителя. Он дает вам энергию и силы на целый день! Яичница, йогурт с орехами или творожная запеканка - белок вам в помощь!<br><br>
        <b>4. Веселые формы: Ловим вдохновение</b><br>
        Кто сказал, что завтрак должен быть скучным? Создавайте свои собственные шедевры, играя с формами и декорациями. Фруктовые смайлики на тарелке или омлет в виде звезды - только ваша фантазия может ограничить вас!<br><br>
        <b>5. Любовь с первого глотка: Утренний ритуал</b><br>
        Сделайте завтрак своим утренним ритуалом любви к себе! Наслаждайтесь каждым глотком, каждым укусом, каждым моментом, который дарит вам энергию и радость. Пусть каждое утро станет для вас праздником жизни!<br><br>
        Итак, подростки, время начать свое утро с энтузиазма и энергии! Готовы ли вы принять вызов и стать мастером своего утреннего ритуала? 🌞🍳
        ]]>
    </string>
    <string name="food_article_title_third">Сладкое без вины: Готовим здоровые десерты для настоящих гурманов</string>
    <string name="label_personal_data">ПЕРСОНАЛЬНЫЕ ДАННЫЕ</string>
</resources>