<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context=".ui.PersonalDataEditorActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.31" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_age"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.42" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_height"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.53" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_weight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/personal_data_title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:fontFamily="@font/mtscompact_black"
        app:layout_constraintTop_toBottomOf="@id/guideline_top"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_title"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_name">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/label_name"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/name_field"
            app:layout_constraintTop_toBottomOf="parent"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:background="@drawable/field_style"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:textColor="@color/gray"
            android:padding="16dp"
            android:textColorHint="@color/semi_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_label"
            app:layout_constraintBottom_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_name"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_age">

        <TextView
            android:id="@+id/age_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/label_age"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/age_field"
            app:layout_constraintTop_toBottomOf="parent"/>

        <EditText
            android:id="@+id/age_field"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:background="@drawable/field_style"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:textColor="@color/gray"
            android:padding="16dp"
            android:textColorHint="@color/semi_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age_label"
            app:layout_constraintBottom_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_age"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_height">

        <TextView
            android:id="@+id/height_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/label_height"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/height_field"
            app:layout_constraintTop_toBottomOf="parent"/>

        <EditText
            android:id="@+id/height_field"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:background="@drawable/field_style"
            android:hint="@string/hint_height"
            android:inputType="number"
            android:textColor="@color/gray"
            android:padding="16dp"
            android:textColorHint="@color/semi_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_label"
            app:layout_constraintBottom_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_height"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_weight">

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/label_weight"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/weight_field"
            app:layout_constraintTop_toBottomOf="parent"/>

        <EditText
            android:id="@+id/weight_field"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:autofillHints="name"
            android:background="@drawable/field_style"
            android:hint="@string/hint_weight"
            android:inputType="number"
            android:textColor="@color/gray"
            android:padding="16dp"
            android:textColorHint="@color/semi_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_label"
            app:layout_constraintBottom_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/btn_save"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_weight"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>