<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="275dp"
    android:padding="16dp"
    android:elevation="0dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_black"
            android:text="@string/label_personal_data"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/btn_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_edit"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ic_grass"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_regular"
            android:text="@string/label_age"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/weight_label" />

        <TextView
            android:id="@+id/age_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/age_label"
            app:layout_constraintEnd_toStartOf="@id/ic_grass"
            app:layout_constraintTop_toTopOf="@id/age_label"
            app:layout_constraintBottom_toBottomOf="@id/age_label"
            app:layout_constraintBaseline_toBaselineOf="@id/age_label" />

        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_regular"
            android:text="@string/label_weight"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/age_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/height_label"/>

        <TextView
            android:id="@+id/weight_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/weight_label"
            app:layout_constraintEnd_toStartOf="@id/ic_grass"
            app:layout_constraintTop_toTopOf="@id/weight_label"
            app:layout_constraintBottom_toBottomOf="@id/weight_label"
            app:layout_constraintBaseline_toBaselineOf="@id/weight_label" />

        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_regular"
            android:text="@string/label_height"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@id/weight_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_edit" />

        <TextView
            android:id="@+id/height_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mtscompact_bold"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toEndOf="@id/height_label"
            app:layout_constraintEnd_toStartOf="@id/ic_grass"
            app:layout_constraintTop_toTopOf="@id/height_label"
            app:layout_constraintBottom_toBottomOf="@id/height_label"
            app:layout_constraintBaseline_toBaselineOf="@id/height_label" />

        <ImageView
            android:id="@+id/ic_grass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_grass"
            android:layout_marginTop="75dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_edit"
            app:layout_constraintTop_toBottomOf="@id/text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
